--- a/nomadcoder_vanila.js/index.html
+++ b/nomadcoder_vanila.js/index.html
@@ -10,12 +10,9 @@
 <body>
     <!-- <h1 class="hello" id="title">Grab me!</h1> -->
     <div class="hello">
-        <h1 class="hello">Grab me!1</h1>
-        <h1 class="hello">Grab me!2</h1>
-        <h1 class="hello">Grab me!3</h1>
-        <h1 class="hello">Grab me!4</h1>
-        <h1 class="hello">Grab me!5</h1>    
+        <h1 class="sexy-font">Click me!</h1>  
     </div>
+
     
 </body>
 <script src="app.js"></script>
