--- a/nomadcoder_vanila.js/practice/index_1.html
+++ b/nomadcoder_vanila.js/practice/index_1.html
@@ -8,13 +8,12 @@
     <title>Momentum</title>
 </head>
 <body>
-    <form id="login-form" class="hidden">
-        <input required maxlength="15" type="text" placeholder="what is your name?" />
-        <!-- <button>Log In</button> -->
-        <input type="submit" />
-    </form>
-    <h1 id="greeting" class="hidden"></h1>
-    <!-- <a href="https://nomadcoder.co">Go to courses</a> -->
+    <!-- <h1 class="hello" id="title">Grab me!</h1> -->
+    <div class="hello">
+        <h1 class="sexy-font">Click me!</h1>  
+    </div>
+
+    
 </body>
 <script src="app.js"></script>
 </html>
