--- a/nomadcoder_vanila.js/index.html
+++ b/nomadcoder_vanila.js/index.html
@@ -22,10 +22,15 @@
         <span></span>
         <span></span>
     </div>
+    <div id="weather">
+        <span></span>
+        <span></span>
+    </div>
 </body>
 <script src="js/greeting.js"></script>
 <script src="js/clock.js"></script>
 <script src="js/quetes.js"></script>
 <script src="js/backgroud.js"></script>
 <script src="js/todo.js"></script>
+<script src="js/wheather.js"></script>
 </html>
