--- a/nomadcoder_vanila.js/index.html
+++ b/nomadcoder_vanila.js/index.html
@@ -9,15 +9,17 @@
 </head>
 <body>
     <form id="login-form" class="hidden">
-        <input required maxlength="15" type="text" placeholder="what is your name?" />
-        <input type="submit" />
+        <input class="input-holder" required maxlength="15" type="text" placeholder="What is your name?" /><br/>
+        <input class="hidden" type="submit" />
     </form>
     <h2 id="clock">00:00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
-    <form id="todo-form">
-        <input type="text" placeholder="Write a To Do and Press Enter" />
-    </form>
-    <ul id="todo-list"></ul>
+    <section class="todo-sect">
+        <form id="todo-form">
+            <input type="text" placeholder="Write a To Do and Press Enter" />
+        </form>
+        <ul id="todo-list"></ul>
+    </section>
     <div id="quote">
         <span></span>
         <span></span>
