--- a/nomadcoder_vanila.js/index.html
+++ b/nomadcoder_vanila.js/index.html
@@ -13,15 +13,15 @@
         <input class="hidden" type="submit" />
     </form>
     <h2 id="clock">00:00:00</h2>
-    <h1 id="greeting" class="hidden"></h1>
     <section class="todo-sect">
+        <h1 id="greeting" class="hidden"></h1>
         <form id="todo-form">
             <input type="text" placeholder="Write a To Do and Press Enter" />
         </form>
         <ul id="todo-list"></ul>
     </section>
     <div id="quote">
-        <span></span>
+        <span></span><br>
         <span></span>
     </div>
     <div id="weather">
