--- a/nomadcoder_vanila.js/index.html
+++ b/nomadcoder_vanila.js/index.html
@@ -5,33 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Momentum</title>
+    <title>RB's To Do List</title>
 </head>
 <body>
+    <p class="copy">ⓒ copyright by Real_Bird</p>
+    <section id="widget">
+        <h2 id="fulldate"></h2>
+        <h3 id="clock">00 : 00 : 00</h3>
+        <div id="weather" class="weather">
+            <img id="weatherimg" /><br>
+            <span id="firstspan"></span><br>
+            <span id="secondspan"></span>
+        </div>
+    </section>
     <form id="login-form" class="hidden">
         <input class="input-holder" required maxlength="15" type="text" placeholder="What is your name?" /><br/>
         <input class="hidden" type="submit" />
     </form>
-    <h2 id="clock">00:00:00</h2>
-    <section class="todo-sect">
+    <div class="todo-sect">
         <h1 id="greeting" class="hidden"></h1>
         <form id="todo-form">
             <input type="text" placeholder="Write a To Do and Press Enter" />
         </form>
-        <ul id="todo-list"></ul>
-    </section>
+        <ul id="todo-list" class="listcontain"></ul>
+    </div>
     <div id="quote">
         <span></span><br>
-        <span></span>
-    </div>
-    <div id="weather">
-        <span></span>
         <span></span>
     </div>
 </body>
 <script src="js/greeting.js"></script>
 <script src="js/clock.js"></script>
-<script src="js/quetes.js"></script>
+<script src="js/quotes.js"></script>
 <script src="js/backgroud.js"></script>
 <script src="js/todo.js"></script>
 <script src="js/wheather.js"></script>
