--- a/nomadcoder_react/practice/index.html
+++ b/nomadcoder_react/practice/index.html
@@ -6,25 +6,39 @@
 </body>
 <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+<script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
-  const root = document.getElementById("root");
+  function Btn({ text, fontSize = 14 }) {
+    return <button
+      // onClick={changeValue}
+      style={{
+        backgroundColor: "tomato",
+        color: "white",
+        padding: "10px 20px",
+        border: 0,
+        borderRadius: 10,
+        fontSize,
+      }}>{text}</button>
+  }
+  {/*const MemorizeBtn = React.memo(Btn); {/* re-render 방지 */ }
+  Btn.propTypes = {
+    text: PropTypes.string.isRequired,
+    fontSize: PropTypes.number,
+  }
   function App() {
-    const [minutes, setMinutes] = React.useState("");
-    const onChange = (event) => {
-      setMinutes(event.target.value);
-    }
+    const [value, setValue] = React.useState("Save Changes");
+    const changeValue = () => setValue("Revert Changes");
     return (
       <div>
-        <h1>Super Converter</h1>
-        <label htmlFor="minutes">Minutes</label>
-        <input value={minutes} id="minutes" placeholder="Minutes" type="number" onChange={onChange} />
-        <h3>You want to convert {minutes}</h3>
-        <label htmlFor="hours">Hours</label>
-        <input id="hours" placeholder="Hours" type="number" />
+        {/* <Btn text={value} changeValue={changeValue} /> {/* 컴포넌트 인라인 속성은 변수 설정일 뿐, props의 기능을 하지 않음*/}
+        {/* <MemorizeBtn text="Continue" /> */}
+        <Btn text={value} fontSize={18} />
+        <Btn text={"Continue"} />
       </div>
     );
   }
+  const root = document.getElementById("root");
   ReactDOM.render(<App />, root);
 </script>
 
