--- a/nomadcoder_vanila.js/index.html
+++ b/nomadcoder_vanila.js/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,22 +8,29 @@
     <link rel="stylesheet" href="css/style.css">
     <title>RB's To Do List</title>
 </head>
+
 <body>
     <p class="copy">ⓒ copyright by Real_Bird</p>
     <section id="widget">
-        <h2 id="fulldate"></h2>
-        <h3 id="clock">00 : 00 : 00</h3>
-        <div id="weather" class="weather">
-            <img id="weatherimg" /><br>
-            <span id="firstspan"></span><br>
-            <span id="secondspan"></span>
+        <div>
+            <p>
+            <h2 id="fulldate"></h2>
+            <h3 id="clock">00 : 00 : 00</h3>
+            </p>
+        </div>
+        <div id="weather">
+            <img id="weatherimg" />
+            <div class="weather">
+                <span id="firstspan"></span><br>
+                <span id="secondspan"></span>
+            </div>
         </div>
     </section>
     <form id="login-form" class="hidden">
-        <input class="input-holder" required maxlength="15" type="text" placeholder="What is your name?" /><br/>
+        <input class="input-holder" required maxlength="15" type="text" placeholder="What is your name?" /><br />
         <input class="hidden" type="submit" />
     </form>
-    <div class="todo-sect">
+    <div id="todo-sect" class="todo-sect">
         <h1 id="greeting" class="hidden"></h1>
         <form id="todo-form">
             <input type="text" placeholder="Write a To Do and Press Enter" />
@@ -40,4 +48,5 @@
 <script src="js/backgroud.js"></script>
 <script src="js/todo.js"></script>
 <script src="js/wheather.js"></script>
+
 </html>
