--- a/web_study/CSS_selector/index.html
+++ b/web_study/CSS_selector/index.html
@@ -35,6 +35,10 @@
     <div class="con">4</div>
     <div class="con">5</div>
   </section>
+
+  <p name="p"></p>
+  <div name="div"></div>
+  <code name="code">sdfsfsfsfdsf</code>
 </body>
 
 </html>
