--- a/web_study/CSS_selector/index.html
+++ b/web_study/CSS_selector/index.html
@@ -37,7 +37,12 @@
   </section>
 
   <p name="p"></p>
-  <div name="div"></div>
+  <div name="div">
+    <ul>
+      <li></li>
+      <p></p>
+    </ul>
+  </div>
   <code name="code">sdfsfsfsfdsf</code>
 </body>
 
