--- a/web_study/test.html
+++ b/web_study/test.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-<head> </head>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>test</title>
+</head>
 
 <body>
-  <h1>Hello World</h1>
-  <p>This is a web page.</p>
-  <style>
-    h1 {
-      color: red;
-    }
 
-    p {
-      background: aqua;
-    }
-  </style>
+
+
+  <body>
+    <div>
+      <img src="https://ghchart.rshah.org/real-bird" alt="github_grass" style="position: relative;top: 0;left: -25%;" />
+    </div>
+  </body>
 </body>
 
 </html>
