--- a/web_study/test.html
+++ b/web_study/test.html
@@ -6,6 +6,43 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>test</title>
+  <style>
+    .fire {
+      width: 300px;
+      height: 300px;
+      transform-origin: 50% 48%;
+      animation: wobble-hor-bottom 0.7s infinite ease-out;
+    }
+
+    @keyframes wobble-hor-bottom {
+
+      0%,
+      100% {
+        transform: translateX(0%);
+        transform-origin: 50% 50%;
+      }
+
+      15% {
+        transform: translateX(-30px) rotate(-6deg);
+      }
+
+      30% {
+        transform: translateX(15px) rotate(6deg);
+      }
+
+      45% {
+        transform: translateX(-15px) rotate(-3.6deg);
+      }
+
+      60% {
+        transform: translateX(9px) rotate(2.4deg);
+      }
+
+      75% {
+        transform: translateX(-6px) rotate(-1.2deg);
+      }
+    }
+  </style>
 </head>
 
 <body>
@@ -14,7 +51,10 @@
 
   <body>
     <div>
-      <img src="https://ghchart.rshah.org/real-bird" alt="github_grass" style="position: relative;top: 0;left: -25%;" />
+      <svg class="fire" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+        <path
+          d="M323.5 51.25C302.8 70.5 284 90.75 267.4 111.1C240.1 73.62 206.2 35.5 168 0C69.75 91.12 0 210 0 281.6C0 408.9 100.2 512 224 512s224-103.1 224-230.4C448 228.4 396 118.5 323.5 51.25zM304.1 391.9C282.4 407 255.8 416 226.9 416c-72.13 0-130.9-47.73-130.9-125.2c0-38.63 24.24-72.64 72.74-130.8c7 8 98.88 125.4 98.88 125.4l58.63-66.88c4.125 6.75 7.867 13.52 11.24 19.9C364.9 290.6 353.4 357.4 304.1 391.9z" />
+      </svg>
     </div>
   </body>
 </body>
