--- a/web_study/flexibleWeb/index.html
+++ b/web_study/flexibleWeb/index.html
@@ -16,9 +16,27 @@
 
 <body>
   <div id="wrap">
+    <section class="info_section">
+      <ul class="info_list">
+        <li><a href=""><img src="img/s_img/info_icon_01.png" alt="info_icon_01"></a></li>
+        <li><a href=""><img src="img/s_img/info_icon_02.png" alt="info_icon_02"></a></li>
+        <li><a href=""><img src="img/s_img/info_icon_03.png" alt="info_icon_03"></a></li>
+        <li><a href=""><img src="img/s_img/info_icon_04.png" alt="info_icon_04"></a></li>
+      </ul>
+    </section>
     <header class="header">
-      <h1>h1</h1>
-      <nav>nav</nav>
+      <h1 class="logo">
+        <a href="index.html">flat<br />design</a>
+      </h1>
+      <nav class="nav">
+        <ul class="gnb">
+          <li><a href="index.html">홈</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
+          <li><a href="inroduce.html">플랫 디자인이란?</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
+          <li><a href="gallery.html">갤러리</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
+          <li><a href="board.html">문의 사항</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
+        </ul>
+      </nav>
+      <span class="menu_toggle_btn">전체 메뉴 토글 버튼</span>
     </header>
     <section class="slider_section">slider_section</section>
     <section class="gallery_section">gallery_section</section>
