--- a/web_study/flexibleWeb/index.html
+++ b/web_study/flexibleWeb/index.html
@@ -38,17 +38,86 @@
       </nav>
       <span class="menu_toggle_btn">전체 메뉴 토글 버튼</span>
     </header>
-    <section class="slider_section">slider_section</section>
-    <section class="gallery_section">gallery_section</section>
-    <section class="rankup_section">rankup_section</section>
-    <section class="latest_post_section">latest_post_section</section>
-    <section class="popular_post_section">popular_post_section</section>
-    <section class="banner_section">
-      <div class="banner_box_01">banner_box_01</div>
-      <div class="banner_box_02">banner_box_02</div>
+    <section class="slider_section">
+      <span class="prev_btn">이전 버튼</span><span class="next_btn">다음 버튼</span>
     </section>
-    <section class="social_section">social_section</section>
-    <footer class="footer">footer</footer>
+    <section class="gallery_section">
+      <ul class="gallery_list">
+        <li>
+          <a href="#">
+            <figure>
+              <img src="img/p_img/gallery_01.jpg" alt="gallery_01">
+              <figcaption>디자인 트렌드 플랫</figcaption>
+            </figure>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <figure>
+              <img src="img/p_img/gallery_02.jpg" alt="gallery_02">
+              <figcaption>원색이 포인트 플랫</figcaption>
+            </figure>
+          </a>
+        </li>
+      </ul>
+    </section>
+    <section class="rankup_section">
+      <h2 class="title">인기 검색어</h2>
+      <ul class="rankup_list">
+        <li><a href="">반응형 웹</a></li>
+        <li><a href="">미디어 쿼리</a></li>
+        <li><a href="">뷰포트</a></li>
+        <li><a href="">CSS 트릭스</a></li>
+        <li><a href="">W3C</a></li>
+        <li><a href="">루크 W</a></li>
+        <li><a href="">CSS 젠 가든</a></li>
+        <li><a href="">클리어 보스</a></li>
+        <li><a href="">XE</a></li>
+        <li><a href="">워드프레스</a></li>
+      </ul>
+    </section>
+    <section class="latest_post_section">
+      <h2 class="title">최근 글</h2>
+      <ul>
+        <li><a href="">안녕하세요 홈페이지가 오픈...</a></li>
+        <li><a href="">홈페이지 리뉴얼...</a></li>
+        <li><a href="">flat design은...</a></li>
+        <li><a href="">blog에서 다양한 정보를...</a></li>
+        <li><a href="">저는 누굴까요?...</a></li>
+      </ul>
+    </section>
+    <section class="popular_post_section">
+      <h2 class="title">인기 글</h2>
+      <ul>
+        <li><a href="">안녕하세요 홈페이지가 오픈...</a></li>
+        <li><a href="">홈페이지 리뉴얼...</a></li>
+        <li><a href="">flat design은...</a></li>
+        <li><a href="">blog에서 다양한 정보를...</a></li>
+        <li><a href="">저는 누굴까요?...</a></li>
+      </ul>
+    </section>
+    <section class="banner_section">
+      <div class="banner_box_01">
+        <a href=""><img src="img/s_img/w3c_logo.png" alt="w3c_logo"></a>
+      </div>
+      <div class="banner_box_02">
+        <ul class="banner_list">
+          <li><a href=""><img src="img/s_img/js_logo.png" alt="js"></a></li>
+          <li><a href=""><img src="img/s_img/html_logo.png" alt="html"></a></li>
+          <li><a href=""><img src="img/s_img/css_logo.png" alt="css"></a></li>
+        </ul>
+      </div>
+    </section>
+    <section class="social_section">
+      <ul class="social_list">
+        <li><a href=""><img src="img/s_img/social_icon_01.png" alt="social_icon_01"></a></li>
+        <li><a href=""><img src="img/s_img/social_icon_02.png" alt="social_icon_02"></a></li>
+        <li><a href=""><img src="img/s_img/social_icon_03.png" alt="social_icon_03"></a></li>
+      </ul>
+    </section>
+    <footer class="footer">
+      <p>copyright&copy; 2014.flat design blog all rights reserved.</p>
+    </footer>
   </div>
 </body>
 
