--- a/web_study/flexibleWeb/gallery.html
+++ b/web_study/flexibleWeb/gallery.html
@@ -9,6 +9,7 @@
   <title>갤러리</title>
   <link rel="stylesheet" type="text/css" href="css/reset.css" />
   <link rel="stylesheet" type="text/css" href="css/styles.css" />
+  <link rel="stylesheet" type="text/css" href="css/subpage.css" />
   <link rel="shortcut icon" href="img/favicon/favicon.ico" />
   <link rel="apple-touch-icon-precomposed" href="img/favicon/flat-design-touch.png">
   <script src="js/jquery.min.js"></script>
@@ -16,21 +17,84 @@
 
 <body>
   <div id="wrap">
-    <header class="header">
-      <h1>h1</h1>
-      <nav>nav</nav>
-    </header>
-    <section class="slider_section">slider_section</section>
-    <section class="gallery_section">gallery_section</section>
-    <section class="rankup_section">rankup_section</section>
-    <section class="latest_post_section">latest_post_section</section>
-    <section class="popular_post_section">popular_post_section</section>
-    <section class="banner_section">
-      <div class="banner_box_01">banner_box_01</div>
-      <div class="banner_box_02">banner_box_02</div>
+    <section class="info_section">
+      <ul class="info_list">
+        <li><a href=""><img src="img/s_img/info_icon_01.png" alt="info_icon_01"></a></li>
+        <li><a href=""><img src="img/s_img/info_icon_02.png" alt="info_icon_02"></a></li>
+        <li><a href=""><img src="img/s_img/info_icon_03.png" alt="info_icon_03"></a></li>
+        <li><a href=""><img src="img/s_img/info_icon_04.png" alt="info_icon_04"></a></li>
+      </ul>
     </section>
-    <section class="social_section">social_section</section>
-    <footer class="footer">footer</footer>
+    <header class="header">
+      <h1 class="logo">
+        <a href="index.html">flat<br />design</a>
+      </h1>
+      <nav class="nav">
+        <ul class="gnb">
+          <li><a href="index.html">홈</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
+          <li><a href="inroduce.html">플랫 디자인이란?</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
+          <li><a href="gallery.html">갤러리</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
+          <li><a href="board.html">문의 사항</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
+        </ul>
+      </nav>
+      <span class="menu_toggle_btn">전체 메뉴 토글 버튼</span>
+    </header>
+    <section class="sub_header_section">
+      <h2>현재 페이지와 연결되어 있는 메뉴 이름</h2>
+      <ul class="breadcrum_list">
+        <li><a href="index.html">홈</a></li>
+        <li><a href="현재 페이지 경로">현재 페이지와 연결되어 있는 메뉴 이름</a></li>
+      </ul>
+    </section>
+    <section class="content_section">
+      <div class="content_row_1">
+        <ul class="gallery_list">
+          <li><a href=""><img src="img/p_img/sub_gallery_01.jpg" alt="sub_gallery_01"></a></li>
+          <li><a href=""><img src="img/p_img/sub_gallery_02.jpg" alt="sub_gallery_02"></a></li>
+          <li><a href=""><img src="img/p_img/sub_gallery_03.jpg" alt="sub_gallery_03"></a></li>
+          <li><a href=""><img src="img/p_img/sub_gallery_04.jpg" alt="sub_gallery_04"></a></li>
+          <li><a href=""><img src="img/p_img/sub_gallery_05.jpg" alt="sub_gallery_05"></a></li>
+          <li><a href=""><img src="img/p_img/sub_gallery_06.jpg" alt="sub_gallery_06"></a></li>
+          <li><a href=""><img src="img/p_img/sub_gallery_07.jpg" alt="sub_gallery_07"></a></li>
+          <li><a href=""><img src="img/p_img/sub_gallery_08.jpg" alt="sub_gallery_08"></a></li>
+          <li><a href=""><img src="img/p_img/sub_gallery_09.jpg" alt="sub_gallery_09"></a></li>
+          <li><a href=""><img src="img/p_img/sub_gallery_10.jpg" alt="sub_gallery_10"></a></li>
+          <li><a href=""><img src="img/p_img/sub_gallery_11.jpg" alt="sub_gallery_11"></a></li>
+          <li><a href=""><img src="img/p_img/sub_gallery_12.jpg" alt="sub_gallery_12"></a></li>
+        </ul>
+      </div>
+      <div class="content_row_2">
+        <div class="search_box">
+          <form action="#" method="get">
+            <input type="search" class="search_window" name="gallery_search_window" placeholder="검색어">
+            <div class="search_select_box">
+              <span>검색 대상</span>
+              <ul class="search_select_list">
+                <li>제목</li>
+                <li>내용</li>
+                <li>제목+내용</li>
+                <li>댓글</li>
+                <li>이름</li>
+                <li>닉네임</li>
+                <li>아이디</li>
+                <li>태그</li>
+              </ul>
+            </div>
+          </form>
+          <div class="write_box"><a href="#">글 쓰기</a></div>
+        </div>
+      </div>
+      <div class="content_row_3">
+        <span class="list_prev_btn">갤러리 이전 버튼</span>
+        <a href="#">1</a>
+        <a href="#">2</a>
+        <a href="#">3</a>
+        <span class="list_next_btn">갤러리 다음 버튼</span>
+      </div>
+    </section>
+    <footer class="footer">
+      <p>copyright&copy; 2014.flat design blog all rights reserved.</p>
+    </footer>
   </div>
 </body>
 
