--- a/web_study/flexibleWeb/index.html
+++ b/web_study/flexibleWeb/index.html
@@ -31,7 +31,7 @@
       <nav class="nav">
         <ul class="gnb">
           <li><a href="index.html">홈</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
-          <li><a href="inroduce.html">플랫 디자인이란?</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
+          <li><a href="introduce.html">플랫 디자인이란?</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
           <li><a href="gallery.html">갤러리</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
           <li><a href="board.html">문의 사항</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
         </ul>
