--- a/web_study/flexibleWeb/introduce.html
+++ b/web_study/flexibleWeb/introduce.html
@@ -40,51 +40,34 @@
     </header>
     <section class="content_section">
       <div class="content_row_1">
-        <div class="board_table">
-          <caption>문의사항 게시판</caption>
-          <thead>
-            <tr>
-              <th>번호</th>
-              <th>제목</th>
-              <th>글쓴이</th>
-              <th>조회수</th>
-            </tr>
-          </thead>
-          <tbody class=""></tbody>
-          <tr>
-            <td>5</td>
-            <td><a href="">저는 누굴까요?</a></td>
-            <td>FLAT DESIGN</td>
-            <td>22</td>
-          </tr>
-          <tr>
-            <td>4</td>
-            <td><a href="">BLOG에서 다양한 정보를 만나보세요.</a></td>
-            <td>FLAT DESIGN</td>
-            <td>32</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td><a href="">FLAT DESIGN은 원색을 강조합니다.</a></td>
-            <td>FLAT DESIGN</td>
-            <td>67</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td><a href="">홈페이지 리뉴얼 소식</a></td>
-            <td>FLAT DESIGN</td>
-            <td>96</td>
-          </tr>
-          <tr>
-            <td>1</td>
-            <td><a href="">안녕하세요, 홈페이지를 오픈했습니다.</a></td>
-            <td>FLAT DESIGN</td>
-            <td>123</td>
-          </tr>
+        <img src="img/s_img/introduce_01.png" alt="introduce_01">
+        <h3>플랫 디자인</h3>
+        <p>...텍스트 생략...</p>
+      </div>
+      <div class="content_row_2">
+        <article>
+          <img src="img/s_img/introduce_02.png" alt="introduce_02">
+          <h4>텍스트를 이용하는 방법</h4>
+          <p>...텍스트 생략...</p>
+        </article>
+        <article>
+          <img src="img/s_img/introduce_03.png" alt="introduce_03">
+          <h4>그림을 이용하는 방법</h4>
+          <p>...텍스트 생략...</p>
+        </article>
+        <article>
+          <img src="img/s_img/introduce_04.png" alt="introduce_04">
+          <h4>아이콘을 이용하는 방법</h4>
+          <p>...텍스트 생략...</p>
+        </article>
+      </div>
+      <div class="content_row_3">
+        <h4>플랫 디자인의 미래</h4>
+        <div class="para">
+          <p>...텍스트 생략...</p>
+          <p>...텍스트 생략...</p>
         </div>
       </div>
-      <div class="content_row_2"></div>
-      <div class="content_row_3"></div>
     </section>
     <footer class="footer">
       <p>copyright&copy; 2014.flat design blog all rights reserved.</p>
