--- a/web_study/practiceWeb/practice.html
+++ b/web_study/practiceWeb/practice.html
@@ -10,12 +10,31 @@
 </head>
 
 <body>
-  <div id="wrap">
-    <div class="item1"></div>
-    <div class="item2"></div>
-    <div class="item3"></div>
-    <div class="item4"></div>
-    <div class="item5"></div>
+  <div class="container">
+    <div class="img_box">
+      <a href="">
+        <img src="img/1.jpg" alt=""></a>
+    </div>
+    <div class="img_box">
+      <a href="">
+        <img src="img/2.jpg" alt=""></a>
+    </div>
+    <div class="img_box">
+      <a href="">
+        <img src="img/3.jpg" alt=""></a>
+    </div>
+    <div class="img_box">
+      <a href="">
+        <img src="img/4.jpg" alt=""></a>
+    </div>
+  </div>
+  <div class="btn_box">
+    <button class="prev_btn">prev</button>
+    <button class="img_box__btn">1</button>
+    <button class="img_box__btn">2</button>
+    <button class="img_box__btn">3</button>
+    <button class="img_box__btn">4</button>
+    <button class="next_btn">next</button>
   </div>
 </body>
 <script src="practice.js"></script>
