--- a/web_study/practiceWeb/practice.html
+++ b/web_study/practiceWeb/practice.html
@@ -6,34 +6,34 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="practice.css">
-  <title>Document</title>
+  <title>Carousel slider</title>
 </head>
 
 <body>
-  <div class="container">
-    <div class="img_box">
+  <div class="slider">
+    <div class="slider__item">
       <a href="">
         <img src="img/1.jpg" alt=""></a>
     </div>
-    <div class="img_box">
+    <div class="slider__item">
       <a href="">
         <img src="img/2.jpg" alt=""></a>
     </div>
-    <div class="img_box">
+    <div class="slider__item">
       <a href="">
         <img src="img/3.jpg" alt=""></a>
     </div>
-    <div class="img_box">
+    <div class="slider__item">
       <a href="">
         <img src="img/4.jpg" alt=""></a>
     </div>
   </div>
   <div class="btn_box">
     <button class="prev_btn">prev</button>
-    <button class="img_box__btn">1</button>
-    <button class="img_box__btn">2</button>
-    <button class="img_box__btn">3</button>
-    <button class="img_box__btn">4</button>
+    <button class="slider__item__btn">1</button>
+    <button class="slider__item__btn">2</button>
+    <button class="slider__item__btn">3</button>
+    <button class="slider__item__btn">4</button>
     <button class="next_btn">next</button>
   </div>
 </body>
