22-04-17 flexible web introduce page

--- a/web_study/flexibleWeb/gallery.html
+++ b/web_study/flexibleWeb/gallery.html
@@ -32,7 +32,7 @@
       <nav class="nav">
         <ul class="gnb">
           <li><a href="index.html">홈</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
-          <li><a href="inroduce.html">플랫 디자인이란?</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
+          <li><a href="introduce.html">플랫 디자인이란?</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
           <li><a href="gallery.html">갤러리</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
           <li><a href="board.html">문의 사항</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
         </ul>
@@ -40,10 +40,10 @@
       <span class="menu_toggle_btn">전체 메뉴 토글 버튼</span>
     </header>
     <section class="sub_header_section">
-      <h2>현재 페이지와 연결되어 있는 메뉴 이름</h2>
+      <h2>갤러리</h2>
       <ul class="breadcrum_list">
-        <li><a href="index.html">홈</a></li>
-        <li><a href="현재 페이지 경로">현재 페이지와 연결되어 있는 메뉴 이름</a></li>
+        <li><a href="index.html">홈 /</a></li>
+        <li><a href="#">갤러리</a></li>
       </ul>
     </section>
     <section class="content_section">
