--- a/web_study/flexibleWeb/introduce.html
+++ b/web_study/flexibleWeb/introduce.html
@@ -9,6 +9,7 @@
   <title>플랫 디자인이란?</title>
   <link rel="stylesheet" type="text/css" href="css/reset.css" />
   <link rel="stylesheet" type="text/css" href="css/styles.css" />
+  <link rel="stylesheet" type="text/css" href="css/subpage.css" />
   <link rel="shortcut icon" href="img/favicon/favicon.ico" />
   <link rel="apple-touch-icon-precomposed" href="img/favicon/flat-design-touch.png">
   <script src="js/jquery.min.js"></script>
@@ -31,13 +32,20 @@
       <nav class="nav">
         <ul class="gnb">
           <li><a href="index.html">홈</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
-          <li><a href="inroduce.html">플랫 디자인이란?</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
+          <li><a href="introduce.html">플랫 디자인이란?</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
           <li><a href="gallery.html">갤러리</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
           <li><a href="board.html">문의 사항</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
         </ul>
       </nav>
       <span class="menu_toggle_btn">전체 메뉴 토글 버튼</span>
     </header>
+    <section class="sub_header_section">
+      <h2>플랫 디자인이란?</h2>
+      <ul class="breadcrum_list">
+        <li><a href="index.html">홈 /</a></li>
+        <li><a href="#">플랫 디자인이란?</a></li>
+      </ul>
+    </section>
     <section class="content_section">
       <div class="content_row_1">
         <img src="img/s_img/introduce_01.png" alt="introduce_01">
